chore: rerun notebooks

--- a/ComplementaryScripts/14. Review Stage Corrections.ipynb
+++ b/ComplementaryScripts/14. Review Stage Corrections.ipynb
@@ -24,9 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from cobra.io import read_sbml_model,write_sbml_model\n",
@@ -37,9 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with warnings.catch_warnings():\n",
@@ -50,9 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from cobra import Reaction, Metabolite"
@@ -68,9 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mcaps.reactions.PGK.bounds = -1000, 1000\n",
@@ -362,10 +354,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from operator import attrgetter\n",
@@ -376,10 +366,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def summary(model, solution):\n",
@@ -406,10 +394,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def open_bounds():\n",
@@ -421,10 +407,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from escher import Builder\n",
@@ -436,10 +420,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from cobra.flux_analysis import pfba"
@@ -927,11 +909,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "boundary SK_h2_c already exists",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-ea0bae8b8304>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Add a dedicated sink reactions for H2 and formate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmcaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_boundary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmetabolite\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmcaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetabolites\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mh2_c\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'sink'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mmcaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreactions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSK_h2_c\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbounds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmcaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_boundary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmetabolite\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmcaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetabolites\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfor_c\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'sink'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmcaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreactions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSK_for_c\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbounds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda/envs/efpro2_rev/lib/python3.6/site-packages/cobra/core/model.py\u001b[0m in \u001b[0;36madd_boundary\u001b[0;34m(self, metabolite, type, reaction_id, lb, ub)\u001b[0m\n\u001b[1;32m    505\u001b[0m             \u001b[0mreaction_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"{}_{}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprefix\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmetabolite\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    506\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mreaction_id\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreactions\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 507\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'boundary %s already exists'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mreaction_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    508\u001b[0m         \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"{} {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmetabolite\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    509\u001b[0m         rxn = Reaction(id=reaction_id, name=name, lower_bound=lb,\n",
+      "\u001b[0;31mValueError\u001b[0m: boundary SK_h2_c already exists"
+     ]
+    }
+   ],
    "source": [
     "# Add a dedicated sink reactions for H2 and formate\n",
     "mcaps.add_boundary(metabolite=mcaps.metabolites.h2_c, type='sink')\n",
@@ -942,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -956,21 +949,25 @@
       "co2_e 1.7871\n",
       "cu2_e 0.0001\n",
       "fe2_e 0.0003\n",
-      "h_e 0.435\n",
+      "h2_c 10.0\n",
+      "h_e 0.4349\n",
       "k_e 0.0094\n",
       "mg2_e 0.0066\n",
       "na1_e 0.0021\n",
       "no3_e 0.435\n",
-      "o2_e 2.282\n",
-      "pi_e 0.0293\n",
-      "so4_e 0.009\n",
+      "o2_e 2.2821\n",
+      "pi_e 0.0292\n",
+      "so4_e 0.0089\n",
       "zn2_e 0.0001\n",
       "OUT\n",
       "----------\n",
-      "h2o_e 8.8191\n",
+      "doxopa_c 0.0001\n",
+      "h2o2_c 0.0171\n",
+      "h2o_e 8.819\n",
+      "rdmbzi_c 0.0001\n",
       "Growth Rate\n",
       "----------\n",
-      "0.05309000103804224\n"
+      "0.05310082003464868\n"
      ]
     }
    ],
@@ -1028,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1035,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mInfeasible\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-61-052be83ec457>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mmcaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreactions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEX_co2_e\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbounds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m18.46\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mmcaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreactions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSK_h2_c\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbounds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0msolution\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpfba\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmcaps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmcaps\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msolution\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-12-052be83ec457>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mmcaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreactions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEX_co2_e\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbounds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m18.46\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mmcaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreactions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSK_h2_c\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbounds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0msolution\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpfba\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmcaps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmcaps\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msolution\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/anaconda/envs/efpro2_rev/lib/python3.6/site-packages/cobra/flux_analysis/parsimonious.py\u001b[0m in \u001b[0;36mpfba\u001b[0;34m(model, fraction_of_optimum, objective, reactions)\u001b[0m\n\u001b[1;32m     65\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m         add_pfba(m, objective=objective,\n\u001b[0;32m---> 67\u001b[0;31m                  fraction_of_optimum=fraction_of_optimum)\n\u001b[0m\u001b[1;32m     68\u001b[0m         \u001b[0mm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mslim_optimize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror_value\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m         \u001b[0msolution\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_solution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreactions\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mreactions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/anaconda/envs/efpro2_rev/lib/python3.6/site-packages/cobra/flux_analysis/parsimonious.py\u001b[0m in \u001b[0;36madd_pfba\u001b[0;34m(model, objective, fraction_of_optimum)\u001b[0m\n\u001b[1;32m     96\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobjective\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'_pfba_objective'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'The model already has a pFBA objective.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 98\u001b[0;31m     \u001b[0msutil\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfix_objective_as_constraint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfraction\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfraction_of_optimum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     99\u001b[0m     reaction_variables = ((rxn.forward_variable, rxn.reverse_variable)\n\u001b[1;32m    100\u001b[0m                           for rxn in model.reactions)\n",
       "\u001b[0;32m/anaconda/envs/efpro2_rev/lib/python3.6/site-packages/cobra/util/solver.py\u001b[0m in \u001b[0;36mfix_objective_as_constraint\u001b[0;34m(model, fraction, bound, name)\u001b[0m\n\u001b[1;32m    390\u001b[0m         \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfix_objective_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    391\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mbound\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 392\u001b[0;31m         \u001b[0mbound\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mslim_optimize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merror_value\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mfraction\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    393\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobjective\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdirection\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'max'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    394\u001b[0m         \u001b[0mub\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbound\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -1065,70 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "There is an `e` compartment but it does not look like it is the actual external compartment.\n",
-      "There is an `e` compartment but it does not look like it is the actual external compartment.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "IN\n",
-      "----------\n",
-      "ca2_e 0.0043\n",
-      "cl_e 0.0131\n",
-      "cu2_e 0.0001\n",
-      "fe2_e 0.0004\n",
-      "h_e 10.5021\n",
-      "k_e 0.0108\n",
-      "mg2_e 0.0076\n",
-      "na1_e 0.0024\n",
-      "no3_e 0.5022\n",
-      "o2_e 1.8628\n",
-      "pi_e 0.0338\n",
-      "so4_e 0.0103\n",
-      "zn2_e 0.0001\n",
-      "OUT\n",
-      "----------\n",
-      "co2_c 7.9372\n",
-      "doxopa_c 0.0001\n",
-      "h2o2_c 0.0197\n",
-      "h2o_c 8.637\n",
-      "rdmbzi_c 0.0001\n",
-      "Growth Rate\n",
-      "----------\n",
-      "0.06127911117806917\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Formate + CO2\n",
-    "with mcaps:\n",
-    "    open_bounds()\n",
-    "    mcaps.reactions.EX_no3_e.bounds = -1000, 1000\n",
-    "    mcaps.reactions.EX_ch4_e.bounds = 0, 0\n",
-    "    mcaps.reactions.SMMOi.bounds = 0, 1000\n",
-    "    mcaps.reactions.GLNS.bounds = 0, 1000\n",
-    "    mcaps.reactions.ALAD_L.bounds = 0, 1000\n",
-    "    mcaps.reactions.EX_co2_e.bounds = -18.46, 0\n",
-    "    mcaps.reactions.SK_for_c.bounds = -10, 0\n",
-    "    solution = pfba(mcaps)\n",
-    "    summary(mcaps, solution)\n",
-    "    \n",
-    "    # visualize_fluxes(mcaps, solution)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1094,63 @@
       "rdmbzi_c 0.0001\n",
       "Growth Rate\n",
       "----------\n",
-      "0.06127911117806891\n"
+      "0.06127911117806917\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Formate + CO2\n",
+    "with mcaps:\n",
+    "    open_bounds()\n",
+    "    mcaps.reactions.EX_no3_e.bounds = -1000, 1000\n",
+    "    mcaps.reactions.EX_ch4_e.bounds = 0, 0\n",
+    "    mcaps.reactions.SMMOi.bounds = 0, 1000\n",
+    "    mcaps.reactions.GLNS.bounds = 0, 1000\n",
+    "    mcaps.reactions.ALAD_L.bounds = 0, 1000\n",
+    "    mcaps.reactions.EX_co2_e.bounds = -18.46, 1000\n",
+    "    mcaps.reactions.SK_for_c.bounds = -10, 0\n",
+    "    solution = pfba(mcaps)\n",
+    "    summary(mcaps, solution)\n",
+    "    \n",
+    "    # visualize_fluxes(mcaps, solution)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IN\n",
+      "----------\n",
+      "ca2_e 0.0043\n",
+      "cl_e 0.0131\n",
+      "cu2_e 0.0001\n",
+      "fe2_e 0.0004\n",
+      "for_c 10.0\n",
+      "h_e 10.5021\n",
+      "k_e 0.0108\n",
+      "mg2_e 0.0076\n",
+      "na1_e 0.0024\n",
+      "no3_e 0.5022\n",
+      "o2_e 1.8628\n",
+      "pi_e 0.0338\n",
+      "so4_e 0.0103\n",
+      "zn2_e 0.0001\n",
+      "OUT\n",
+      "----------\n",
+      "co2_c 7.9372\n",
+      "doxopa_c 0.0001\n",
+      "h2o2_c 0.0197\n",
+      "h2o_c 8.637\n",
+      "rdmbzi_c 0.0001\n",
+      "Growth Rate\n",
+      "----------\n",
+      "0.06127911117806917\n"
      ]
     }
    ],
@@ -1173,13 +1163,59 @@
     "    mcaps.reactions.SMMOi.bounds = 0, 1000\n",
     "    mcaps.reactions.GLNS.bounds = 0, 1000\n",
     "    mcaps.reactions.ALAD_L.bounds = 0, 1000\n",
-    "    mcaps.reactions.EX_co2_e.bounds = 0, 0\n",
+    "    mcaps.reactions.EX_co2_e.bounds = 0, 1000\n",
     "    mcaps.reactions.SK_for_c.bounds = -10, 0\n",
     "    solution = pfba(mcaps)\n",
     "    summary(mcaps, solution)\n",
     "    \n",
     "    # visualize_fluxes(mcaps, solution)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <table>\n",
+       "            <tr>\n",
+       "                <td><strong>Reaction identifier</strong></td><td>TKT2</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Name</strong></td><td>Transketolase</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Memory address</strong></td>\n",
+       "                <td>0x01213ba898</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Stoichiometry</strong></td>\n",
+       "                <td>\n",
+       "                    <p style='text-align:right'>f6p_c + g3p_c <=> e4p_c + xu5p_D_c</p>\n",
+       "                    <p style='text-align:right'>beta-D-fructofuranose 6-phosphate(2-) + D-glyceraldehyde 3-phosphate <=> D-erythrose 4-phosphate(2-) + D-xylulose 5-phosphate(2-)</p>\n",
+       "                </td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>GPR</strong></td><td>MCA3040 or MCA3046</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Lower bound</strong></td><td>-1000.0</td>\n",
+       "            </tr><tr>\n",
+       "                <td><strong>Upper bound</strong></td><td>1000.0</td>\n",
+       "            </tr>\n",
+       "        </table>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<Reaction TKT2 at 0x1213ba898>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mcaps.reactions.TKT2"
    ]
   },
   {
